k8s/marketplace-web-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-web
  namespace: flexable
spec:
  selector:
    matchLabels:
      app: marketplace-web
  template:
    metadata:
      labels:
        app: marketplace-web
    spec:
      containers:
        - name: marketplace-web
          image: 816119410753.dkr.ecr.us-east-2.amazonaws.com/flexable-marketplace-webapp
          resources:
            limits:
              memory: "512Mi"
              cpu: "100m"
          ports:
            - containerPort: 3000
