k8s/marketplace-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: marketplace-web
  namespace: flexable
spec:
  type: NodePort
  selector:
    app: marketplace-web
  ports:
    - port: 3000
      targetPort: 3000
